fix dark mode toggle

--- a/css/main.css
+++ b/css/main.css
@@ -434,7 +434,7 @@ select {
   filter: drop-shadow(0px 0.0625rem 0.125rem rgba(0, 0, 0, 0.25));
 }
 @media screen and (max-width: 30rem) {
-  .color-switch__label {
+  .color-switch__label--main {
     display: none;
   }
 }
